--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ buildscript {
     dependencies {
         //Safe Args
         classpath("androidx.navigation:navigation-safe-args-gradle-plugin:2.4.1")
+        classpath 'com.google.gms:google-services:4.3.10'
     }
 }
 
