Intenet work done

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.sourav1.chatapp">
-    <uses-permission android:name="android.permission.INTERNET"/>
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -11,16 +12,18 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ChatApp">
         <activity
-            android:name=".Screens.Dashboard"
-            android:label=""
+            android:name=".Screens.DetailedChat"
             android:exported="false" />
+        <activity
+            android:name=".Screens.Dashboard"
+            android:exported="false"
+            android:label="" />
         <activity
             android:name=".Screens.LoginScreen"
             android:exported="false" />
         <activity
             android:name=".Screens.SignUpScreen"
             android:exported="false" />
-
         <activity
             android:name=".MainActivity"
             android:exported="true">
